[DevTools] Fix text representation of IP addresses in SAN certificates

BUG=632555

Review-Url: https://codereview.chromium.org/2191243002
Cr-Commit-Position: refs/heads/master@{#409105}

Former-commit-id: b758e1cbb05284d39cd59a9f5140574318ad7898